# DS102024

./: .gitignore  Juan.txt  README.md  pyproject.toml  weekly.py
0-ComplementaryResourses/: eda.py  repaso_algebra.ipynb  repaso_estadistica.ipynb
0-ComplementaryResourses/eda_airbnb/: airbnb.ipynb
0-ComplementaryResourses/eda_mpg/: Readme.md
0-ComplementaryResourses/eda_mpg/notebooks/: mpg.ipynb
1-RampUp/0-Setup/1-VSCode/: bash_cli_vscode.ipynb
1-RampUp/1-Git/Practica/: git_ejercicios.ipynb
1-RampUp/1-Git/Teoria/: git.ipynb
1-RampUp/2-Markdown/Practica/: Ejercicios_markdown.ipynb
1-RampUp/2-Markdown/Teoria/: Markdown_en_Jupyter.ipynb
1-RampUp/3-Python/Practica/: ejercicios.ipynb
2-DataAnalysis/0-Matematicas/: data-types-and-distributions.md
2-DataAnalysis/0-Matematicas/1_Vectores/: vectores.ipynb
2-DataAnalysis/0-Matematicas/2_Matrices/: matrices.ipynb
2-DataAnalysis/0-Matematicas/3_Probabilidad&Estadistica/: 0-Estadistica.ipynb  1-Estadisticas_descriptivas.ipynb  2-Distribuciones_de_probabilidad.ipynb  3-Intervalos_de_confianza.ipynb  4-Test_de_hipotesis.ipynb  5-Tests_de_chi-cuadrado.ipynb  6-ANOVA.ipynb
2-DataAnalysis/1-Numpy/Teoria/: 6-Sorting.ipynb  (+7 more)
2-DataAnalysis/10-EDA/: Analisis_Datos_Iris_pro.ipynb  Analisis_Datos_Palmer_pro.ipynb  Analisis_Datos_Titanic_pro.ipynb  Missing_pro.ipynb  data-analysis-guide.md  data_analyzer_assignment.md  guia-analisis-datos.md  iris.parquet  missing.parquet  poke.parquet  pokeapi_EDA.ipynb  pokeapi_EDA_prof.ipynb
2-DataAnalysis/4-API/: api_marvel.py
3-MachineLearning/0-IAEtica/: 1-Sesgo.ipynb  2-Equidad.ipynb  3-ModelCards.ipynb
3-MachineLearning/1-Introduccion/: 1-IntroduccionML.ipynb
3-MachineLearning/10-Proyecto_ML/: Proyecto_Machine_Learning.ipynb
3-MachineLearning/3-ReduccionDimension/: 1-Reduccion_Dimencionalidad.ipynb
3-MachineLearning/4-NoSupervisado/: 1-NoSupervisado.ipynb  2-DBSCAN.ipynb  3-OtrosModelosClustering.ipynb
3-MachineLearning/5-Recomendacion/: 1-SistemasRecomendacion.ipynb
3-MachineLearning/6-ShapyAnomalias/: 1-InterpretacionModelos.ipynb  2-Anomalias.ipynb
3-MachineLearning/8-Pipeline/: Pipeline.ipynb
3-MachineLearning/9-ML/: machine-learning-project-guide.md
3-MachineLearning/EndToEnd/: MLProject.ipynb
4-DataEngineer/Docker/: Dockerfile  docker-compose.yml
4-DataEngineer/Docker/bitcoin/: Dockerfile  check_db.py  config.ini  docker-compose.yml  pyproject.toml  test_extract.py
4-DataEngineer/Docker/bitcoin/bitcoin_etl/: __init__.py  extract.py  load.py  main.py  models.py  scheduler.py  transform.py
4-DataEngineer/ETL/: ETL.ipynb
4-DataEngineer/MageAI/: mage_ai_presentation.md
4-DataEngineer/Polars&PySpark/: 01_introduccion_y_definiciones.ipynb  02_analisis_comparativo.ipynb  03_ejemplo_etl.ipynb
4-DataEngineer/PolarsPySpark/: 00_unificador.py  01_introduccion_y_definiciones.ipynb  03_ejemplo_etl.ipynb  04_ejercicio_etl.ipynb  pyproject.toml
4-DataEngineer/PolarsPySpark/etl_example/: __init__.py  database.py  etl_config.py  etl_dag.py  logger.py  models.py
4-DataEngineer/PolarsPySpark/etl_exercise/: __init__.py  database.py  etl_config.py  etl_dag.py  logger.py  models.py
4-DataEngineer/PolarsPySpark/utils/: __init__.py  config.ini  etl_dag.py  unificador.py
4-DataEngineer/PyTest/: README.md
eda_mpg/: mpg.ipynb
(+188 files in other folders)
