[tool.poetry]
name = "bootcamp-ds"
version = "0.1.0"
description = ""
authors = ["Juan_Maniglia <90753457+JuanManiglia@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.34"
pydantic = "^2.9.1"
scikit-learn = "^1.5.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
polars = "^1.7.1"
pymongo = "^4.8.0"
plotly = "^5.24.1"
selenium = "^4.24.0"
graphviz = "^0.20.3"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
beautifulsoup4 = "^4.12.3"
ipywidgets = "^8.1.5"
surprise = "^0.1"
liac-arff = "^2.5.0"
openpyxl = "^3.1.5"
yfinance = "^0.2.50"
orjson = "^3.10.14"
scikit-optimize = "^0.10.2"
optuna = "^4.2.0"
skforecast = "^0.14.0"
shap = "^0.46.0"
lime = "^0.2.0.1"
pytest = "^8.3.5"
pytest-cov = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
